--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -18,8 +18,9 @@
           <% @queue_positions.each do |queue_position| %>
             <div class="container">
               <div class="cards-customers">
-                <i class="fas fa-mobile-alt fa-2x"></i> <h4> **<%= queue_position.customer.mobile_number.delete(" ").split(//).last(3).join %> </h4>
-                <i class="fas fa-map-marker-alt fa-2x"></i> <h4> <%= queue_position.position %> </h4>
+                <!-- <div class="mobile-div"> -->
+                  <i class="fas fa-mobile-alt fa-2x"></i> <h4> **<%= queue_position.customer.mobile_number.delete(" ").split(//).last(3).join %> </h4>
+                <!-- </div> -->
                 <div class="let-in-btn">
                   <i class="fas fa-sign-in-alt"></i> <%= link_to "Let in", remove_path(queue_position), class: "let-in-btn", method: :delete, data: { confirm: "Are you sure you want to delete queue position #{queue_position.position}?" } %>
                 </div>
