--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,7 +1,7 @@
 <%= render 'shared/navbar' %>
 <%= render 'shared/flashes' %>
 
-<div class="body-wrapper">
+<div>
   <div class="container pt-3">
     <div class="row">
       <div class="col-12 mx-auto text-center pt-3">
